--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "practice",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://amgaudet.github.io/react-demo",
+  "homepage": "https://amgaudet.github.io/react-portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -10,7 +10,6 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "dotenv": "^10.0.0",
-    "gh-pages": "^3.2.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
